--- a/pos-store/frontend/package.json
+++ b/pos-store/frontend/package.json
@@ -36,10 +36,12 @@
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "next-themes": "^0.4.4",
+    "node-thermal-printer": "^4.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.6.1",
+    "react-to-print": "^3.0.4",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
